css/styles.css
@import url("imports/variables.css");

/* GLOBAL STYLES */

body{
    margin: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--header-fonts);
    font-size: 2rem;
}


a, p, li{
    font-family: var(--regular-fonts);
    font-size: 1.2rem;
}


li > a{
    text-decoration: none;
    color: black;
}

/* STYLING THE HEADER */ 

header{
    display: flex;
    flex-direction: row;
    height: 50px;
    background-color: var(--primary-color);
    border-bottom: 2px solid black;
}

header > a{
    padding: 5px;
    width: 100px; 
    display: flex;
    align-items: center;
}
/* Added flex to center my logo */

.header_logo{
    height: 100%;
    background-color: var(--logo-color);
    padding: 3px;
    border-radius: 10px;
}

.nav_ul{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin: 0px auto;
    background-color: var(--primary-color);
    width: 100%;
    border-radius: 0px 0px 0px 15px;
    padding: 50px 0px 0px 0px;
    align-items: flex-end;
}

.nav_li{
    list-style: none;
    margin: 10px 15px;
}

.nav_li > a{
    font-family: 'Oswald', 'Open Sans', Arial, Helvetica, sans-serif;
    font-size: 1.5rem;
    text-decoration: underline;
    padding: 0px 10px;
    transition: ease-in-out 0.3s;
}

.nav_li > a:hover{
    color: wheat;
    transition: ease-in-out 0.3s;
}

/* THIS IS FOR THE HERO IMAGE AND STORY */ 

.hero_story{
    background-image: url(../images/hero_lower_res.jpg);
    min-height: 850px; /* GOING WITH 850px FOR MOBILE, 1080 FOR DESKTOP */
    margin: 0;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    background-position-x: right;
    display: flex; 
}

.hero_mask{
    flex-grow: 1;
    background: #00000061;
    border: none;
}

.hero_txt{
    position: sticky;
    top: 200px;  
    display: flex;
    flex-direction: column;
    align-items: center;
  
}

.hero_txt > *{
    color: #FFFFFF;
    font-size: 1.4rem;
    text-align: center;
    max-width: 700px;
    padding: 15px;
}

.hero_txt > h1{
    font-size: 3rem;
    margin-bottom: 0px;
}

.cta_btn{
    text-decoration: none;
    border: 2px solid black;
    border-radius: 15px;
    padding: 15px;
    background-color: var(--cta-bg-color);
    color: black;
    font-weight: bold;
    margin: 10px 10px 20px 10px;
}

.cta_btn:hover{
    background-color: var(--cta-bg-hover);
    color: var(--cta-bg-color);
}

.cta_btn:disabled{
    background-color: gray;
}

/* //////// THIS IS FOR CREATING THE HAMBURGER MENU //////// */

nav{
    display: none;
    width: 100%;
}

#hamburger_menu{
    display: none;
}

#hamburger_menu:checked ~ nav{
    display: block;
    position: relative;
}

#menu_icon{
    font-size: 2rem;
    display: block;
    position: absolute;
    z-index: 1;
    top: 1.2%;
    right: 2.5%;
    padding: 0rem 1.5rem;
}

#menu_icon:hover{
    cursor: pointer;
    position: absolute;
}


/* THIS IS FOR THE ROW OF FEATURED PRODUCTS */ 

.featured > h2{
    text-align: center;
}

.webshop_row{
    background-color: white;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: auto;
}

.not-in-stock{
    color: red;
}

.overflow{
    background-color: white;
    display: flex;
    flex-direction: row;
    margin: auto;
    overflow: scroll;
}


.overflow::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }
  .overflow::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.733);
    border-radius: 10px;
  }
  .overflow::-webkit-scrollbar-track {
    background: transparent;
  }

.webshop_rowpic{
    max-height: 150px;
    margin: 10px 30px;
}

.loader {
    border: 16px solid #f3f3f3;
    border-top: 16px solid rgb(0, 255, 145);
    border-radius: 100%;
    width: 30px;
    height: 30px;
    animation: spin 1s linear infinite;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}


.picwlink{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 10px;
    min-height: 350px;
    min-width: 250px;
    justify-content: space-between; 
}

.feat_prod_head{
    font-size: 1.5rem;
    margin: 0px;
    padding: 0px;
    text-align: center;
}

.picwlink > p {
    max-width: 180px;
    text-align: center;
    margin: 0px 0px 10px 0px;
}

.feat_prod_txt{
    max-width: 180px;
    text-align: center;
    margin: 0px 0px 10px 0px;
}

/*THIS IS FOR THE MISSION STATEMENT */  

.rd_mission{
    max-width: 650px;
    margin: auto;
    margin-top: 50px;
    background-image: url(../images/gondolas_lower_res.jpg);
    min-height: 850px;
    background-position-y: 80%;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
}

.mission_box{
    padding-top: 1%;
    background-color: #0000007d;
    flex-grow: 1;
}


.mission_header{
    text-align: center;
    margin: 20px auto 10px auto;
    font-size: 3rem;
    color: #FFFFFF;
}

.mission_statement{
    max-width: 350px;
    margin: 10px auto;
    color: #FFFFFF;
    font-size: 1.4rem;
    text-align: center
}

/* THIS IS FOR THE FOOTER */
footer{
    height: 50px;
    border-top: 2px solid black;
    padding: 0px;
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 3fr 1fr;
    background-color: var(--primary-color);
}

.some{
    display: flex;
    flex-direction: row;
    margin-left: 0px;
    align-items: center;
    background-color: var(--primary-color);
}

a > i{
    text-decoration: none;
    color: black;
    font-size: 3rem;
    margin: 0px 15px;
    display: inline;
}

.about{
    align-self: flex-end;
    background-color: var(--primary-color);
}

/* Had to add the background color to all elements in the footer as the footer div is only 50px, while the  content takes up more space than that. And setting height on the footer to be 100% made the footer way too tall. Adding bg-color to all elements seems to be the way to go here */

.cs_header{
    margin: 0px;
    font-size: 1.2rem;
}

.cs_ul{
    padding-left: 0px;
    margin: 0px 0px 10px 0px;
}

.cs_li{
    list-style: none;
    margin: 5px 0px;
}

.cs_li > a{
    font-size: 0.8rem;
}

.valid{
    border: 2px solid green;
}

.invalid{
    border: 2px solid red;
}

/* MEDIA QUERIES AT THE BOTTOM */

@media (min-width: 600px) {
    header{
        height: 70px;
    }

    header > a{
        padding: 10px;
    }

    nav{
        display: flex;
        align-items: center;
        margin-right: 112px;
    }
    .nav_li > a{
        text-decoration: none;
    }
    #hamburger_menu:checked ~ nav {
        display: flex;
        align-items: center;  
    }    /*     AT FIRST GLANCE, THIS CODE MIGHT SEEM A LITTLE STRANGE. 
                BUT WITHOUT IT, MY NAV BAR WILL LOOK WONKY IN FULL SCREEN WHILE THE CHECKBOX IS CHECKED. 
                NOT A LIKELY  SCENARIO, BUT IT CAN HAPPEN IT PROBABLY WILL    */
    #menu_icon{
        display: none;
    }

    .hero_story{
        max-height: 1080px;
    }

    .hero_mask{
        background-color: #0000001f;
    } 

    .nav_ul{
        display: flex;
        flex-direction: row;
        padding: 0px;
    }
    .nav_li{
        margin: 0px;
    }
    .nav_li > a{
        font-size: 2rem;
    }
    .mission_box{
        padding-top: 50px;
    } /* THIS WAS DONE TO KEEP THE TEXT JUST ABOVE THE NATURAL LINES  OF THE BG IMAGE OF rd_mission ON MORE SCREEN SIZES */
    .webshop_row{
        max-width: 850px;
    }
    .overflow{
        max-width: 850px;
    }
}

